@@ -184,7 +184,7 @@ push_node_padded(SerdReader* reader, size_t maxlen,
 		&reader->stack, sizeof(SerdNode) + maxlen + 1, sizeof(SerdNode));
 
 	SerdNode* const node = (SerdNode*)mem;
-	node->n_bytes = node->n_chars = n_bytes;
+	node->n_bytes = n_bytes;
 	node->flags   = 0;
 	node->type    = type;
 	node->buf     = NULL;
@@ -224,9 +224,6 @@ push_byte(SerdReader* reader, Ref ref, const uint8_t c)
 	uint8_t* const  s    = serd_stack_push(&reader->stack, 1);
 	SerdNode* const node = (SerdNode*)(reader->stack.buf + ref);
 	++node->n_bytes;
-	if (!(c & 0x80)) {  // Starts with 0 bit, start of new character
-		++node->n_chars;
-	}
 	*(s - 1) = c;
 	*s       = '\0';
 }
@@ -1062,7 +1059,7 @@ set_blank_id(SerdReader* reader, Ref ref, size_t buf_size)
 {
 	SerdNode*   node   = deref(reader, ref);
 	const char* prefix = reader->bprefix ? (const char*)reader->bprefix : "";
-	node->n_bytes = node->n_chars = snprintf(
+	node->n_bytes = snprintf(
 		(char*)node->buf, buf_size, "%sb%u", prefix, reader->next_id++);
 }
 
